--- a/module3-solution/styles/styles.css
+++ b/module3-solution/styles/styles.css
@@ -9,6 +9,22 @@ input[type="text"] {
   float: left;
   margin-left: 10px;
 }
+#found-items {
+  clear: both;
+}
+#found-items ul {
+  padding: 0;
+  list-style: none;
+}
+#found-items ul li {
+  margin-top: 10px;
+}
+#found-items ul li:nth-child(odd){
+  background-color: #eee;
+}
+#found-items span.bold {
+  font-weight: bold;
+}
 .loader {
   display: none;
   margin-left: 5px;
